--- a/echopixels.html
+++ b/echopixels.html
@@ -13,25 +13,86 @@
 <!-- Solana Phantom Wallet Connection -->
 <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const walletBtns = ["connect-wallet", "connect-wallet-mobile"];
-  walletBtns.forEach(btnId => {
-    const btn = document.getElementById(btnId);
-    btn && btn.addEventListener('click', async () => {
-      const isPhantomInstalled = window.solana && window.solana.isPhantom;
-      if (isPhantomInstalled) {
-        try {
-          const resp = await window.solana.connect();
-          alert(`Wallet connected: ${resp.publicKey.toString()}`);
-        } catch (err) {
-          alert("Wallet connection failed.");
-          console.error(err);
-        }
-      } else {
-        alert("Phantom Wallet not found. Please install it first.");
-      }
+// Robust Phantom wallet detection and connection overhaul
+let phantomStatus = {
+  connected: false,
+  publicKey: null,
+  provider: null
+};
+
+function updateWalletUI() {
+  const btn = document.getElementById('connect-wallet');
+  if (!btn) return;
+  if (phantomStatus.connected && phantomStatus.publicKey) {
+    btn.textContent = 'Wallet: ' + phantomStatus.publicKey.slice(0,4) + '...' + phantomStatus.publicKey.slice(-4);
+    btn.disabled = true;
+    btn.classList.add('opacity-60');
+  } else {
+    btn.textContent = 'Connect Wallet';
+    btn.disabled = false;
+    btn.classList.remove('opacity-60');
+  }
+}
+
+async function detectPhantomProvider() {
+  if (window.solana && window.solana.isPhantom) {
+    phantomStatus.provider = window.solana;
+    window.solana.on('connect', () => {
+      phantomStatus.connected = true;
+      phantomStatus.publicKey = window.solana.publicKey.toString();
+      updateWalletUI();
     });
-  });
+    window.solana.on('disconnect', () => {
+      phantomStatus.connected = false;
+      phantomStatus.publicKey = null;
+      updateWalletUI();
+    });
+    window.solana.on('accountChanged', (pubkey) => {
+      phantomStatus.publicKey = pubkey ? pubkey.toString() : null;
+      phantomStatus.connected = !!pubkey;
+      updateWalletUI();
+    });
+    updateWalletUI();
+    return true;
+  } else {
+    phantomStatus.provider = null;
+    updateWalletUI();
+    return false;
+  }
+}
+
+async function connectPhantomWallet() {
+  if (!phantomStatus.provider) {
+    alert('Phantom Wallet not found. Please install it from https://phantom.app and refresh the page.');
+    return;
+  }
+  try {
+    const resp = await phantomStatus.provider.connect();
+    phantomStatus.connected = true;
+    phantomStatus.publicKey = resp.publicKey.toString();
+    updateWalletUI();
+    alert(`Wallet connected: ${phantomStatus.publicKey}`);
+  } catch (err) {
+    phantomStatus.connected = false;
+    phantomStatus.publicKey = null;
+    updateWalletUI();
+    alert('Wallet connection failed.');
+    console.error(err);
+  }
+}
+
+document.addEventListener("DOMContentLoaded", async () => {
+  // Try to detect Phantom every 500ms for 5 seconds
+  let tries = 0;
+  let found = false;
+  while (tries < 10 && !found) {
+    found = await detectPhantomProvider();
+    if (!found) await new Promise(res => setTimeout(res, 500));
+    tries++;
+  }
+  // Add click handler
+  const btn = document.getElementById('connect-wallet');
+  if (btn) btn.onclick = connectPhantomWallet;
 });
 </script>
 
@@ -538,120 +599,33 @@ document.addEventListener("DOMContentLoaded", () => {
   
 
 
-  <!-- Hero -->
+  <!-- Combined EchoPixels Header -->
   <main class="flex-grow pt-20">
     <section class="container mx-auto px-4 text-center py-16">
-      <h1 class="text-5xl md:text-6xl font-bold mb-4">
-        Echo<span class="gradient-text">Pixels</span>
+      <h1 class="text-5xl md:text-6xl font-bold mb-4 gradient-text" style="font-family: 'Orbitron', sans-serif;">
+        EchoPixels Interactive Ad Space
       </h1>
-      <p class="text-lg opacity-80 mb-12">
-        Own a piece of the front page. Buy pixel packages, then trade them on our marketplace.
+      <p class="text-lg opacity-80 mb-6">
+        Own a piece of the homepage. Buy pixel packages, then trade or design your space on our marketplace.<br>
+        Zoom & pan our 9 million-pixel canvas. Click a block to purchase or view info.
       </p>
     </section>
 
-    <!-- Buy Packages -->
-    <section id="packages" class="container mx-auto px-4 py-16">
-      <h2 class="text-3xl font-bold mb-8 text-center">Buy Pixel Packages</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- 10×10 -->
-        <div class="card p-6 flex flex-col">
-          <div class="hub-icon mb-4">
-            <i class="fas fa-th" style="font-size:2rem; color:var(--primary)"></i>
-          </div>
-          <h3 class="text-xl font-semibold mb-2">10×10 Pixels</h3>
-          <p class="mb-4 opacity-80">100 total pixels<br/>Price: 1 SOL</p>
-          <a href="#" class="btn-primary mt-auto inline-flex items-center justify-center">
-            Buy Now
-          </a>
-        </div>
-        <!-- 50×50 -->
-        <div class="card p-6 flex flex-col">
-          <div class="hub-icon mb-4">
-            <i class="fas fa-th-large" style="font-size:2rem; color:var(--primary)"></i>
-          </div>
-          <h3 class="text-xl font-semibold mb-2">50×50 Pixels</h3>
-          <p class="mb-4 opacity-80">2,500 total pixels<br/>Price: 20 SOL</p>
-          <a href="#" class="btn-primary mt-auto inline-flex items-center justify-center">
-            Buy Now
-          </a>
-        </div>
-        <!-- 100×100 -->
-        <div class="card p-6 flex flex-col">
-          <div class="hub-icon mb-4">
-            <i class="fas fa-layer-group" style="font-size:2rem; color:var(--primary)"></i>
-          </div>
-          <h3 class="text-xl font-semibold mb-2">100×100 Pixels</h3>
-          <p class="mb-4 opacity-80">10,000 total pixels<br/>Price: 75 SOL</p>
-          <a href="#" class="btn-primary mt-auto inline-flex items-center justify-center">
-            Buy Now
-          </a>
-        </div>
-      </div>
-    </section>
 
-    <!-- Marketplace -->
-    <section id="marketplace" class="container mx-auto px-4 py-16 bg-gray-900/30 rounded-2xl">
-      <h2 class="text-3xl font-bold mb-8 text-center">Marketplace</h2>
-      <div class="overflow-x-auto">
-        <table class="min-w-full text-left">
-          <thead>
-            <tr class="border-b border-blue-900/30">
-              <th class="px-4 py-2">Lot ID</th>
-              <th class="px-4 py-2">Size</th>
-              <th class="px-4 py-2">Owner</th>
-              <th class="px-4 py-2">Price</th>
-              <th class="px-4 py-2">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="border-b border-blue-900/20">
-              <td class="px-4 py-3">#1024</td>
-              <td class="px-4 py-3">10×10</td>
-              <td class="px-4 py-3">0xA3f…9B2</td>
-              <td class="px-4 py-3">1.2 SOL</td>
-              <td class="px-4 py-3">
-                <a href="#" class="btn-primary inline-block text-sm">Buy</a>
-              </td>
-            </tr>
-            <tr class="border-b border-blue-900/20">
-              <td class="px-4 py-3">#2048</td>
-              <td class="px-4 py-3">50×50</td>
-              <td class="px-4 py-3">0xF1c…7D4</td>
-              <td class="px-4 py-3">22 SOL</td>
-              <td class="px-4 py-3">
-                <a href="#" class="btn-primary inline-block text-sm">Buy</a>
-              </td>
-            </tr>
-            <!-- more rows… -->
-          </tbody>
-        </table>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="py-8 text-center text-sm opacity-50">
-    © 2025 EchoHub Network
-  </footer>
 
 
   <!-- ==============================================
      EchoPixels Interactive 10M-Pixel Grid
   ============================================== -->
-<section id="echopixels-grid" class="py-20 bg-[#0d1216] text-white">
+<section id="echopixels-grid" class="py-10 bg-[#0d1216] text-white">
   <div class="container mx-auto px-4">
-    <h2 class="text-3xl md:text-5xl font-bold mb-6 text-center">
-      EchoPixels Interactive Ad Space
-    </h2>
-    <p class="text-center mb-8 opacity-80">
-      Zoom & pan our 9 million-pixel canvas. Click a block to purchase or view info.
-    </p>
 
     <div class="flex flex-col items-center mb-6">
       <div class="flex gap-4 mb-4">
-        <button class="btn-secondary quick-buy" data-x="0" data-y="0" data-w="50" data-h="50">Quick Buy 50x50</button>
-        <button class="btn-secondary quick-buy" data-x="100" data-y="100" data-w="100" data-h="100">Quick Buy 100x100</button>
-        <button class="btn-secondary quick-buy" data-x="500" data-y="500" data-w="200" data-h="200">Quick Buy 200x200</button>
+        <button class="btn-primary quick-buy text-lg px-6 py-3" data-x="0" data-y="0" data-w="10" data-h="10">Quick Buy 10x10</button>
+        <button class="btn-primary quick-buy text-lg px-6 py-3" data-x="0" data-y="0" data-w="50" data-h="50">Quick Buy 50x50</button>
+        <button class="btn-primary quick-buy text-lg px-6 py-3" data-x="0" data-y="0" data-w="100" data-h="100">Quick Buy 100x100</button>
+        <button class="btn-primary quick-buy text-lg px-6 py-3" data-x="0" data-y="0" data-w="200" data-h="200">Quick Buy 200x200</button>
       </div>
       <button id="buyLotBtn" class="btn-primary text-lg px-8 py-3">Buy Lot</button>
     </div>
@@ -732,7 +706,21 @@ document.addEventListener("DOMContentLoaded", () => {
       <b>Price:</b> <span id="lotPrice">0</span> USD
       <span id="lotDiscount" class="ml-2 text-green-400 font-semibold"></span>
     </div>
-    <button id="confirmLotPurchase" class="btn-primary w-full mt-2">Confirm Lot Purchase</button>
+    <div id="lotStep1">
+      <button id="confirmLotPurchase" class="btn-primary w-full mt-2">Confirm Lot Purchase</button>
+    </div>
+    <div id="lotStep2" class="hidden">
+      <div class="mb-2">Send payment to the Solana address below:</div>
+      <div class="bg-[#181f2e] p-2 rounded text-center select-all mb-2 text-blue-400 font-mono">2b5M7q7dkNvKYAYRP3qyQVCMTUCyLF2wMrs4JcJziK3c</div>
+      <div class="mb-2">Amount: <span id="lotSolAmount">0</span> SOL</div>
+      <button id="openWalletPay" class="btn-primary w-full mb-2">Send Payment with Wallet</button>
+      <button id="confirmPaymentSent" class="btn-primary w-full">I've Sent Payment</button>
+      <div class="text-xs mt-2 opacity-70">After payment is detected, you'll be able to design your lot.</div>
+    </div>
+    <div id="lotStep3" class="hidden">
+      <div class="mb-2 text-green-400 font-bold">Payment confirmed!</div>
+      <button id="openDesignLot" class="btn-primary w-full">Design Your Lot</button>
+    </div>
     <div id="lotModalStatus" class="mt-3 text-sm"></div>
   </div>
 </div>
@@ -921,12 +909,26 @@ function getLotPrice(w, h) {
   return { price: price.toFixed(2), discount };
 }
 
-function updateLotPrice() {
+async function updateLotPrice() {
   const w = parseInt(document.getElementById('lotWidth').value);
   const h = parseInt(document.getElementById('lotHeight').value);
   const { price, discount } = getLotPrice(w, h);
   document.getElementById('lotPrice').textContent = price;
   document.getElementById('lotDiscount').textContent = discount === 0 ? '' : (discount === 0.05 ? '5% discount' : '10% discount');
+  // Update SOL price live if payment step is visible
+  if (document.getElementById('lotStep2') && !document.getElementById('lotStep2').classList.contains('hidden')) {
+    document.getElementById('lotSolAmount').textContent = '...';
+    try {
+      const resp = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=solana&vs_currencies=usd');
+      const data = await resp.json();
+      const solUsd = data.solana.usd;
+      const solPrice = (parseFloat(price) / solUsd).toFixed(4);
+      document.getElementById('lotSolAmount').textContent = solPrice;
+      if(window._pendingLot) window._pendingLot.solPrice = solPrice;
+    } catch {
+      document.getElementById('lotSolAmount').textContent = 'Error';
+    }
+  }
 }
 
 // Open lot modal
@@ -973,25 +975,127 @@ document.getElementById('confirmLotPurchase').onclick = async () => {
     status.textContent = 'Some blocks in this lot are already owned. Please choose another lot.';
     return;
   }
-  status.textContent = 'Processing...';
+  // Save lot info for payment step
+  window._pendingLot = { startX, startY, w, h, url, toBuy };
+  // Show payment step
+  document.getElementById('lotStep1').classList.add('hidden');
+  document.getElementById('lotStep2').classList.remove('hidden');
+  // Fetch live SOL/USD price and calculate SOL amount
+  const usd = parseFloat(document.getElementById('lotPrice').textContent);
+  document.getElementById('lotSolAmount').textContent = '...';
+  fetch('https://api.coingecko.com/api/v3/simple/price?ids=solana&vs_currencies=usd')
+    .then(r => r.json())
+    .then(data => {
+      const solUsd = data.solana.usd;
+      const solPrice = (usd / solUsd).toFixed(4);
+      document.getElementById('lotSolAmount').textContent = solPrice;
+      window._pendingLot.solPrice = solPrice;
+    })
+    .catch(() => {
+      document.getElementById('lotSolAmount').textContent = 'Error';
+    });
+};
+
+// Payment step logic
+
+document.getElementById('openWalletPay').onclick = async () => {
+  if (!phantomStatus.provider || !phantomStatus.connected || !phantomStatus.publicKey) {
+    alert('Please connect your Phantom wallet first.');
+    return;
+  }
+
+  const solPrice = parseFloat(document.getElementById('lotSolAmount').textContent);
+  const recipient = '2b5M7q7dkNvKYAYRP3qyQVCMTUCyLF2wMrs4JcJziK3c';
+
+  try {
+    const connection = new solanaWeb3.Connection(solanaWeb3.clusterApiUrl('mainnet-beta'));
+    const fromPubkey = phantomStatus.publicKey; // Use the PublicKey instance directly
+    const toPubkey = new solanaWeb3.PublicKey(recipient);
+
+    const transaction = new solanaWeb3.Transaction().add(
+      solanaWeb3.SystemProgram.transfer({
+        fromPubkey,
+        toPubkey,
+        lamports: Math.round(solPrice * solanaWeb3.LAMPORTS_PER_SOL)
+      })
+    );
+
+    transaction.feePayer = fromPubkey;
+    transaction.recentBlockhash = (await connection.getLatestBlockhash()).blockhash;
+
+    // Let Phantom sign AND send the transaction
+    const txid = await phantomStatus.provider.sendTransaction(transaction, connection);
+    document.getElementById('lotModalStatus').textContent = 'Transaction sent! TX: ' + txid;
+    window._pendingLot.txid = txid;
+  } catch (e) {
+    document.getElementById('lotModalStatus').textContent = 'Wallet payment failed: ' + e.message;
+  }
+};
+
+document.getElementById('confirmPaymentSent').onclick = async () => {
+  // Check for payment confirmation
+  const status = document.getElementById('lotModalStatus');
+  status.textContent = 'Checking for payment...';
+  const solPrice = parseFloat(document.getElementById('lotSolAmount').textContent);
+  const recipient = '2b5M7q7dkNvKYAYRP3qyQVCMTUCyLF2wMrs4JcJziK3c';
+  let fromPubkey = window.solana && window.solana.publicKey ? window.solana.publicKey.toString() : null;
+  if (!fromPubkey) {
+    status.textContent = 'Connect your wallet first.';
+    return;
+  }
+  try {
+    const connection = new solanaWeb3.Connection(solanaWeb3.clusterApiUrl('mainnet-beta'));
+    // Look for a recent transaction from user to recipient for the right amount
+    const sigs = await connection.getSignaturesForAddress(new solanaWeb3.PublicKey(recipient), { limit: 20 });
+    let found = false;
+    for (let sig of sigs) {
+      const tx = await connection.getTransaction(sig.signature);
+      if (!tx) continue;
+      const from = tx.transaction.message.accountKeys[0].toString();
+      const to = tx.transaction.message.accountKeys[1].toString();
+      if (from === fromPubkey && to === recipient) {
+        // Check amount
+        const instr = tx.transaction.message.instructions[0];
+        if (instr.parsed && instr.parsed.info && instr.parsed.info.lamports) {
+          const amt = instr.parsed.info.lamports / solanaWeb3.LAMPORTS_PER_SOL;
+          if (Math.abs(amt - solPrice) < 0.001) {
+            found = true;
+            break;
+          }
+        }
+      }
+    }
+    if (found) {
+      status.textContent = 'Payment confirmed!';
+      document.getElementById('lotStep2').classList.add('hidden');
+      document.getElementById('lotStep3').classList.remove('hidden');
+    } else {
+      status.textContent = 'Payment not found yet. Please wait a minute and try again.';
+    }
+  } catch (e) {
+    status.textContent = 'Error checking payment: ' + e.message;
+  }
+};
+
+document.getElementById('openDesignLot').onclick = async () => {
+  // Mark blocks as purchased and open design modal
+  const lot = window._pendingLot;
   let owner = window.solana && window.solana.publicKey ? window.solana.publicKey.toString() : 'demo-user';
   try {
-    // Write all blocks in lot
-    const promises = toBuy.map(blockId => setDoc(doc(db, 'pixelBlocks', blockId), {
+    const promises = lot.toBuy.map(blockId => setDoc(doc(db, 'pixelBlocks', blockId), {
       owner,
       blockX: parseInt(blockId.split('_')[0])*10,
       blockY: parseInt(blockId.split('_')[1])*10,
-      targetURL: url,
+      targetURL: lot.url,
       purchasedAt: new Date().toISOString(),
     }));
     await Promise.all(promises);
-    status.textContent = 'Success! Lot purchased.';
-    setTimeout(()=>{
-      document.getElementById('lotModal').classList.add('hidden');
-      lotModalOpen = false;
-    }, 1200);
+    document.getElementById('lotModal').classList.add('hidden');
+    lotModalOpen = false;
+    // Open design modal for this lot
+    openDesignModal({ x: lot.startX, y: lot.startY, w: lot.w, h: lot.h, owner, link: lot.url });
   } catch (e) {
-    status.textContent = 'Error: ' + e.message;
+    document.getElementById('lotModalStatus').textContent = 'Error: ' + e.message;
   }
 };
 
