--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
             <div class="max-w-3xl mx-auto">
                 <!-- Whitepaper Download Button -->
                 <div class="flex justify-center mb-8">
-                  <a href="ECHO-Whitepaper.pdf" download="Echo-Whitepaper.pdf" class="inline-flex items-center px-6 py-3 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-bold shadow transition-all duration-200" target="_blank" rel="noopener">
+                  <a href="assets/whitepaper.pdf" download="whitepaper.pdf" class="inline-flex items-center px-6 py-3 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-bold shadow transition-all duration-200" target="_blank" rel="noopener">
                     <svg class="w-5 h-5 mr-2 -ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5 5-5M12 15V3"></path></svg>
                     Download Whitepaper (PDF)
                   </a>
