--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
                 </div>
                 
                 <div class="mt-8 text-center">
-                    <a href="/Users/johngarofalo/Library/Messages/Attachments/ba/10/9A05213F-8AAB-4940-B761-750ABAD3FC6D/ECHO Whitepaper - Final.pdf" class="btn-primary inline-flex items-center" target="_blank" rel="noopener">
+                    <a href="ECHO Whitepaper - Final.pdf" class="btn-primary inline-flex items-center" target="_blank" rel="noopener">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                         </svg>
