--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       
           <!-- Logo -->
-          <a href="saved_resource(1).html" class="flex items-center">
+          <a href="index.html" class="flex items-center">
             <!-- your SVG logo -->
             <span class="text-xl font-bold tracking-wider">
               ECHOHUB<span class="gradient-text">NETWORK</span>
@@ -503,12 +503,12 @@
           <!-- Desktop Links -->
           <div class="flex items-center space-x-6">
             <nav class="hidden md:flex space-x-8">
-              <a href="saved_resource(1).html#about" class="hover:underline">About</a>
-              <a href="saved_resource(1).html#sub-hubs" class="hover:underline">Sub-Hubs</a>
-              <a href="saved_resource(1).html#tokenomics" class="hover:underline">Tokenomics</a>
-              <a href="saved_resource(1).html#whitepaper" class="hover:underline">Whitepaper</a>
-              <a href="saved_resource(1).html#roadmap" class="hover:underline">Roadmap</a>
-              <a href="saved_resource(1).html#join" class="hover:underline">Join</a>
+              <a href="index.html#about" class="hover:underline">About</a>
+              <a href="index.html#sub-hubs" class="hover:underline">Sub-Hubs</a>
+              <a href="index.html#tokenomics" class="hover:underline">Tokenomics</a>
+              <a href="index.html#whitepaper" class="hover:underline">Whitepaper</a>
+              <a href="index.html#roadmap" class="hover:underline">Roadmap</a>
+              <a href="index.html#join" class="hover:underline">Join</a>
             </nav>
       
             <!-- Connect Wallet button (desktop) -->
@@ -531,12 +531,12 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-gray-900 bg-opacity-95 backdrop-blur-md">
           <div class="px-2 pt-2 pb-4 space-y-1 text-center">
-            <a href="saved_resource(1).html#about" class="block py-2 hover:underline">About</a>
-            <a href="saved_resource(1).html#sub-hubs" class="block py-2 hover:underline">Sub-Hubs</a>
-            <a href="saved_resource(1).html#tokenomics" class="block py-2 hover:underline">Tokenomics</a>
-            <a href="saved_resource(1).html#whitepaper" class="block py-2 hover:underline">Whitepaper</a>
-            <a href="saved_resource(1).html#roadmap" class="block py-2 hover:underline">Roadmap</a>
-            <a href="saved_resource(1).html#join" class="block py-2 hover:underline">Join</a>
+            <a href="index.html#about" class="block py-2 hover:underline">About</a>
+            <a href="index.html#sub-hubs" class="block py-2 hover:underline">Sub-Hubs</a>
+            <a href="index.html#tokenomics" class="block py-2 hover:underline">Tokenomics</a>
+            <a href="index.html#whitepaper" class="block py-2 hover:underline">Whitepaper</a>
+            <a href="index.html#roadmap" class="block py-2 hover:underline">Roadmap</a>
+            <a href="index.html#join" class="block py-2 hover:underline">Join</a>
             <!-- Connect Wallet (mobile) -->
             <button
               id="connect-wallet-mobile"
