--- a/echoestate.html
+++ b/echoestate.html
@@ -456,7 +456,7 @@
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
   
       <!-- Logo -->
-      <a href="saved_resource(1).html" class="flex items-center">
+      <a href="index.html" class="flex items-center">
         <!-- your SVG logo -->
         <span class="text-xl font-bold tracking-wider">
           ECHOHUB<span class="gradient-text">NETWORK</span>
